--- a/the-mind-place/config.yml
+++ b/the-mind-place/config.yml
@@ -1,1 +1,4 @@
-
+title: The Mind Place
+description: Integrative Counselling
+baseurl: "/the-mind-place" # Important for your staging URL
+url: "https://josephnogbou.com"
