--- a/the-mind-place/data/settings.yml
+++ b/the-mind-place/data/settings.yml
@@ -1,1 +1,5 @@
-
+site_title: "The Mind Place"
+hero_title: "Integrative Counselling in Cambridge"
+hero_subtitle: "A calm, confidential space for adults navigating anxiety, loss, trauma, and life transitions."
+email: "deborah@themindplace.co.uk"
+phone: "07123 456 789"
